--- a/src/pages/memory_match.html
+++ b/src/pages/memory_match.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memory Match</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Memory Match Game</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css">
+    <link rel="stylesheet" href="../css/memory_match.css">
 </head>
 <body>
+    <nav>
+        <button>Play Game</button>
+        <button>High Scores</button>
+    </nav>
+    <section id="game-title">
+        <h1>Memory Match</h1>
+        <p>Flip two cards at a time. If they match, they stay revealed. Match all pairs to win.</p>
+    </section>
+    <section id="game-area">
+        <div id="status-panel">
+            <h3>Game Status</h3>
+            <p><strong>Moves:</strong> <span id="moves">0</span></p>
+            <p><strong>Matches:</strong> <span id="matches">0</span> / <span id="total-pairs">8</span></p>
+            <p><strong>Time:</strong> <span id="time">0</span> s</p>
+            <hr>
+
+            <button id="btn-new-game">New Game</button>
+            <button id="btn-reset">Reset (Same Board)</button>
+        </div>
+    </section>
 </body>
 </html>
