--- a/src/pages/memory_match.html
+++ b/src/pages/memory_match.html
@@ -50,6 +50,10 @@
                     <span id="matches">0</span> <span>/</span> <span id="total-pairs">8</span>
                 </div>
                 <div>
+                    <p>Streak<p>
+                    <span id="streak">0</span>
+                </div>
+                <div>
                     <p>Time</p>
                     <span id="time">0</span>
                     <span>s</span>
@@ -67,6 +71,7 @@
     <div id="message" class="island">
         <h2>You won!</h2>
         <p>Total Moves: <span id="total-moves">0</span></p>
+        <p>Best Streak: <span id="best-streak">0</span></p>
         <p>Total Time: <span id="total-time">0</span></p>
 
         <div id="save-score-container">
