high scores page logic

--- a/src/pages/high_scores.html
+++ b/src/pages/high_scores.html
@@ -19,44 +19,15 @@
         <th>Rank</th>
         <th>Player</th>
         <th>Moves</th>
+        <th>Best Streak</th>
         <th>Time (s)</th>
         <th>Date</th>
     </tr>
     </thead>
     <tbody id="scores-body">
     <!-- Lab 01: fill with sample rows -->
-    <tr>
-        <td>1</td>
-        <td>Jack</td>
-        <td>4</td>
-        <td>4</td>
-        <td>March 26, 2020</td>
-    </tr>
-
-    <tr>
-        <td>1</td>
-        <td>Jack</td>
-        <td>4</td>
-        <td>4</td>
-        <td>March 26, 2020</td>
-    </tr>
-
-    <tr>
-        <td>1</td>
-        <td>Jack</td>
-        <td>4</td>
-        <td>4</td>
-        <td>March 26, 2020</td>
-    </tr>
-
-    <tr>
-        <td>1</td>
-        <td>Jack</td>
-        <td>4</td>
-        <td>4</td>
-        <td>March 26, 2020</td>
-    </tr>
     </tbody>
 </table>
+<script src="../js/high_scores.js"></script>
 </body>
 </html>
